# QuantumTransport

./: .gitignore  README.md
lab1/: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
lab1/data/: H_matrix  S_matrix  eigenvalues_task_4_hwx_100  eigenvalues_task_4_hwx_120  eigenvalues_task_4_hwx_140  eigenvalues_task_4_hwx_160  eigenvalues_task_4_hwx_180  eigenvalues_task_4_hwx_20  eigenvalues_task_4_hwx_200  eigenvalues_task_4_hwx_220  eigenvalues_task_4_hwx_240  eigenvalues_task_4_hwx_260  eigenvalues_task_4_hwx_280  eigenvalues_task_4_hwx_300  eigenvalues_task_4_hwx_320  eigenvalues_task_4_hwx_340  eigenvalues_task_4_hwx_360  eigenvalues_task_4_hwx_380  eigenvalues_task_4_hwx_40  eigenvalues_task_4_hwx_400  eigenvalues_task_4_hwx_420  eigenvalues_task_4_hwx_440  eigenvalues_task_4_hwx_460  eigenvalues_task_4_hwx_480  eigenvalues_task_4_hwx_500  eigenvalues_task_4_hwx_60  eigenvalues_task_4_hwx_80  eigenvalues_task_5  eigenvalues_test  wavefunctions_task_5  wavefunctions_test
lab1/ploters/: bases.jl  energies.jl  sh_matrixes.jl  wavefunction.jl
lab1/report/: main.tex
lab1/utils/include/: basis_funcs.hpp  params.hpp  solver.hpp  task_manager.hpp
lab1/utils/src/: basis_funcs.cpp  params.cpp  solver.cpp  task_manager.cpp
lab2/: .gitignore  readme.md
lab2/report/: main.tex
lab2/src/: TaskManager.jl  main.jl
lab3/report/: main.tex
lab3/src/: main.py
lab4/report/: main.tex
lab4/src/: main.py
project/: .gitignore
project/report/: main.tex  python_listing.tex
project/src/: helper.jl  julia_plots.jl  main.py
(+18 files in other folders)
